test/sema/typeck/trait/default-method-where-self-bound.out
error: type `MyClass` does not implement trait `Derived`.
--> default-method-where-self-bound.dora:15:5
 | fn main() {
 |     let obj = MyClass();
 |     obj.test();
       ~~~~~~~~~~
 | }
 | 
1 error found.
