test/sema/typeck/trait/default-method-where-self-bound.dora
trait Derived {}

trait Base {
    fn test(): Int64 where Self: Derived {
        42
    }
}

class MyClass

impl Base for MyClass {}

fn main() {
    let obj = MyClass();
    obj.test();
}
